# proyecto_obtencion_de_datos

./: README.md  analisis_basico.py  crear_dataframes.py  extraccion_de_datos.py  pyproject.toml  requirements.txt
EDA/: EDA.ipynb
ETL/: crear_dataframes.py  extraccion_de_datos.py
ETL/dataframes/: player_statistics.parquet  team_statistics.csv  team_statistics.parquet  team_statistics.pkl  team_statistics_clean.parquet
ETL/games/: sr_sport_event_50852649.xml
dataframes/: events.csv  events.parquet  events.pkl  team_statistics.csv  team_statistics.parquet  team_statistics.pkl
streamlit/: app.py
