[project]
name = "proyecto-obtencion-de-datos"
version = "0.1.0"
description = "proyecto obtencion de datos - Grupo 2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "streamlit>=1.53.0",
    "tqdm>=4.67.1",
    "plotly>=5.18.0",
    "pyarrow>=14.0.0",
]
